--- a/index.html
+++ b/index.html
@@ -1,12 +1,12 @@
 <!DOCTYPE html>
 <html>
-<head>
-<title>Page Title</title>
-</head>
-<body>
+    <head>
+        <title>Förderverein Arche Lichtenstein</title>
+    </head>
+    <body>
 
-<h1>This is a Heading</h1>
-<p>This is a paragraph.</p>
+        <h1>Förderverein Arche Lichtenstein</h1>
+        <p>Willkomen!</p>
 
-</body>
+    </body>
 </html>
