--- a/index.html
+++ b/index.html
@@ -1,12 +1,45 @@
 <!DOCTYPE html>
-<html>
+<html lang="de">
     <head>
+        <meta charset="utf-8">
+        <meta name="viewport" content="width=device-width, initial-scale=1">
+        <style>
+        </style>
         <title>Förderverein Arche Lichtenstein</title>
     </head>
     <body>
 
-        <h1>Förderverein Arche Lichtenstein</h1>
-        <p>Willkomen!</p>
+        <header>
+            <h1>Förderverein Arche Lichtenstein</h1>
+        </header>
+
+        <section>
+            <nav>
+                <ul>
+                    <li><a href="#">Über uns</a></li>
+                    <li><a href="#">Aktuelles</a></li>
+                    <li><a href="#">Mitglied werden</a></li>
+                    <li><a href="#">Tokyo</a></li>
+                </ul>
+            </nav>
+
+            <article>
+                <h1>Über uns</h1>
+                <p>Willkomen!</p>
+            </article>
+        </section>
+
+        <footer>
+            <p>Footer</p>
+        </footer>
+
+        <details>
+            Details
+        </details>
+
+        <summary>
+            Summary
+        </summary>
 
     </body>
 </html>
