vieles: * Seiten erstellt * Navigationsfunktion eingebaut

--- a/mitglied-werden/index.html
+++ b/mitglied-werden/index.html
@@ -5,7 +5,7 @@
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <style>
         </style>
-        <title>Förderverein Arche Lichtenstein</title>
+        <title>Mitglied werden - Förderverein Arche Lichtenstein</title>
         <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.4/jquery.min.js"></script>
     </head>
     <body>
@@ -22,12 +22,15 @@
             </div>
 
             <article>
-                <h1>Über uns</h1>
-                <p>Willkomen!</p>
+                <h1>Mitglied werden</h1>
+                <p>...alles für den Club!</p>
             </article>
         </section>
 
         <div id="footer_placeholder"/>
+        <footer>
+            <p>Footer</p>
+        </footer>
 
         <script>
             $( "#nav_placeholder" ).load( "/navbar.html" );
