--- a/kontakt/index.html
+++ b/kontakt/index.html
@@ -5,7 +5,7 @@
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <style>
         </style>
-        <title>Förderverein Arche Lichtenstein</title>
+        <title>Kontakt - Förderverein Arche Lichtenstein</title>
         <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.4/jquery.min.js"></script>
     </head>
     <body>
@@ -22,12 +22,15 @@
             </div>
 
             <article>
-                <h1>Über uns</h1>
-                <p>Willkomen!</p>
+                <h1>Kontakt</h1>
+                <p>Ruf doch mal an ;)</p>
             </article>
         </section>
 
         <div id="footer_placeholder"/>
+        <footer>
+            <p>Footer</p>
+        </footer>
 
         <script>
             $( "#nav_placeholder" ).load( "/navbar.html" );
