--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <style>
         </style>
-        <title>Förderverein Arche Lichtenstein</title>
+        <title>Über uns - Förderverein Arche Lichtenstein</title>
         <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.4/jquery.min.js"></script>
     </head>
     <body>
